# agentbox

./: .gitignore  Cargo.toml  README.md  install.sh
resources/: Dockerfile.default  entrypoint.sh
src/: agent.rs  config.rs  container.rs  git.rs  hostexec.rs  image.rs  lib.rs  main.rs  notify.rs  setup.rs  status.rs
tests/: setup_tests.rs
wiki/: 2026-03-10-additional-volumes-design.md  2026-03-10-additional-volumes-plan.md  2026-03-10-additional-volumes-plan.md.tasks.json  2026-03-10-agentbox-design.md  2026-03-10-agentbox-plan.md  2026-03-10-agentbox-plan.md.tasks.json  2026-03-11-buildkit-recovery-design.md  2026-03-11-buildkit-recovery.md  2026-03-11-buildkit-recovery.md.tasks.json  2026-03-13-host-bridge-design.md  2026-03-13-host-bridge-plan.md  2026-03-22-auto-stop-design.md  2026-03-22-auto-stop-plan.md  2026-03-24-v0.1.0-release-prep-design.md  2026-03-24-v0.1.0-release-prep-plan.md  2026-04-03-per-cli-flags-design.md  2026-04-03-per-cli-flags-plan.md  2026-04-03-remove-stop-command-design.md  2026-04-03-remove-stop-command-plan.md  2026-04-07-agentbox-setup-design.md  2026-04-07-agentbox-setup-plan.md  2026-04-07-homebrew-tap-design.md  2026-04-07-homebrew-tap-plan.md  2026-04-07-status-command-design.md  2026-04-07-status-command-plan.md  2026-04-11-shell-command-design.md  2026-04-11-shell-command-plan.md  2026-04-14-live-status-design.md  2026-04-15-build-notifications-design.md  2026-04-15-build-notifications-plan.md  2026-04-15-claude-auth-recommended-flow-design.md  2026-04-15-claude-auth-recommended-flow-plan.md  2026-04-15-codex-integration-plan.md  (+2 more)
(+11 files in other folders)
