[package]
name = "agentbox"
version = "0.1.0"
edition = "2021"
description = "Run AI coding agents in isolated Apple Containers"
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
toml = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
num_cpus = "1.17"
anyhow = "1.0"
dirs = "6.0"
tempfile = "3.14"
