[package]
name = "agentbox"
version = "0.1.0"
edition = "2021"
description = "Run AI coding agents in isolated Apple Containers"
license = "GPL-3.0-only"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
toml = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
num_cpus = "1.17"
anyhow = "1.0"
dirs = "6.0"
tempfile = "3.14"
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "io-std", "process", "signal", "sync", "macros", "time"] }
tokio-tungstenite = "0.24"
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
rand = "0.8"
libc = "0.2"
crossterm = { version = "0.28", features = ["event-stream"] }
toml_edit = "0.22"

[dev-dependencies]
tempfile = "3.8"
